# issue-foundry

./: .gitignore  README.md  pyproject.toml
docs/: input-contract.md  investigation-workflow.md  mvp-spec.md
src/issue_foundry/: __init__.py  __main__.py  cli.py  config.py  inputs.py  readable_text_evidence.py  repository_inventory.py  source_snapshot.py  workspace_tree.py
src/issue_foundry/commands/: __init__.py  create_repo.py  plan.py  publish_issues.py
tests/: support.py  test_inputs.py  test_readable_text_evidence.py  test_repository_inventory.py  test_source_snapshot.py
