[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "issue-foundry"
version = "0.1.0"
description = "Generate clean-room GitHub issue backlogs from public repositories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<1",
]

[project.scripts]
issue-foundry = "issue_foundry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_foundry"]
